<resources>
    <string name="app_name">Study Goal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_th">th</string>
    <string name="just_a_moment_ago">Just a moment ago</string>
    <string name="on">On</string>
    <string name="engagement">engagement</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="_for">for</string>
    <string name="every">Every</string>
    <string name="day">Day</string>
    <string name="week_week">Week</string>
    <string name="month">Month</string>
    <string name="set">Set</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="module">Module</string>
    <string name="post">Post</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="hide">Hide</string>
    <string name="it_is_often_forgotten">It is often forgotten that password thing. Enter your email address below and click on the \'Request Password Reset\' button. We will contact you shortly!</string>
    <string name="action_settings">Settings</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email id</string>
    <string name="login_logintoyouraccount">Log into your account</string>
    <string name="choose_your_institute">Choose your institution</string>
    <string name="login_title">Study Goal</string>
    <string name="login_forgotpass">Forgot Password ?</string>
    <string name="login_login_btn">Log In</string>
    <string name="tap_to_select">Tap To Select</string>
    <string name="log_view_activities">View Activities</string>
    <string name="log_log_activity">Log Activity</string>
    <string name="log_new_activity">New Activity</string>
    <string name="activity_type">Activity Type</string>
    <string name="reminder_to_take_breather_after">Reminder to Take Breather After</string>
    <string name="activity_history">Activity History</string>
    <string name="log_recent">Report Completed Activity</string>
    <string name="time_spent">Time spent</string>
    <string name="write_a_note">Write a note…</string>
    <string name="all_activities">All Activities</string>
    <string name="activity_details">Activity Details</string>
    <string name="choose_module">Filter</string>
    <string name="choose_activity_type">Choose Activity Type</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="addtarget_because">Motivation</string>
    <string name="stretch_target">Stretch Target</string>
    <string name="hide_post">Hide Post</string>
    <string name="hide_friend">Hide Friend</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="people_on_your_course">People on your course</string>
    <string name="set_stretch_goal">Set Stretch Goal</string>
    <string name="target_reached">Target Reached!</string>
    <string name="send_request">Send Request</string>
    <string name="pending_request">Pending Request</string>
    <string name="friend_request">Friend Request</string>
    <string name="activity_log">Activity Log</string>
    <string name="my_course_engagement">My Course Engagement</string>
    <string name="my_result">My Result</string>
    <string name="everything">Everything</string>
    <string name="my_friends">My Friends</string>
    <string name="home_screen">Startup screen</string>
    <string name="trophies">Trophies</string>
    <string name="language">Language</string>
    <string name="course_engagement">Course Engagement</string>
    <string name="attainment">Attainment</string>
    <string name="points">Activity Points</string>
    <string name="activity_points">Activity Points</string>
    <string name="leader_board">Engagement Leaderboard</string>
    <string name="events_attended">Events Attended</string>
    <string name="app_usage">App Usage</string>
    <string name="attendance">Attendance Summary</string>
    <string name="this_week">This Week</string>
    <string name="period">Period</string>
    <string name="compare_to">Compare to</string>
    <string name="time_period">Time Period</string>
    <string name="last_day">Last Day</string>
    <string name="last_week">Last Week</string>
    <string name="last_week_engagement">Last 7 days engagement</string>
    <string name="last_month_engagement">Last 28 days engagement</string>
    <string name="Overall_engagement">Overall engagement</string>
    <string name="last_month">Last Month</string>
    <string name="Overall">Overall</string>
    <string name="anymodule">All Activity</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_7_days_short">7d</string>
    <string name="last_28_days_short">28d</string>
    <string name="all_days">All</string>
    <string name="no_one">No One</string>
    <string name="top10">Top 10</string>
    <string name="average">Average</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="overall">Overall</string>
    <string name="engagement_graph">VLE Activity</string>
    <string name="last_24_hours">Last 24 hours</string>
    <string name="add">Add</string>
    <string name="report_activity">Start Activity Now (Timed)</string>
    <string name="activity">Activity</string>
    <string name="terms">Terms and Conditions</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="fail">Failed to recover password, please try again later</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="email_notregistered">Email address not registered</string>
    <string name="for_text">For</string>
    <string name="top">Top</string>
    <string name="feed">Activity Feed</string>
    <string name="stats">Stats</string>
    <string name="log">Log</string>
    <string name="target">Target</string>
    <string name="ok">Ok</string>
    <string name="logout">Logout</string>
    <string name="student_id">Student ID</string>
    <string name="post_hidden_message">Post hidden successfully</string>
    <string name="failed_to_hide_message">Failed to hide post</string>
    <string name="facebook_not_implemented">Facebook not implemented at this moment</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="failed_to_unhide_friend">Failed to unhide friend! Please try again later</string>
    <string name="failed_to_hide_friend">Failed to hide friend! Please try again later</string>
    <string name="deleted_friend_message">Friend has been removed from your list</string>
    <string name="not_deleted_friend_message">Failed to remove friend from friendlist</string>
    <string name="hide_friend_message">Friend has been hidden</string>
    <string name="what_would_you_want_to_see">What would you like</string>
    <string name="to_see">to see?</string>
    <string name="fail_to_accept_friend_request">Failed to accept friend request!</string>
    <string name="not_deleted_friend_request_message">Failed to remove friend request</string>
    <string name="fail_sendFriendRequest">Failed to send friend request!</string>
    <string name="any_module">Any Module</string>
    <string name="hour">"hour "</string>
    <string name="and">and</string>
    <string name="minute">minute</string>
    <string name="activity_details_title">Activity Details</string>
    <string name="fail_to_delete_from_activity_history">Failed to delete activity from history, please try again later</string>
    <string name="edit_target">Edit Target</string>
    <string name="add_target">Add Target</string>
    <string name="fail_to_edit_target_insuficient_time">At least 1 minute must be set for the target to be edited</string>
    <string name="target_edited">Target has been edited successfully</string>
    <string name="something_went_wrong">Sorry. Unknown error. Please check your connection and try again later.</string>
    <string name="fail_to_add_target_insufficient_time">At least 1 minute must be set for the target to be saved</string>
    <string name="posted_message">Successfully posted message!</string>
    <string name="fail_to_post_message">Failed to post message! Please try again later.</string>
    <string name="search">Search</string>
    <string name="requests">Requests</string>
    <string name="friends">Friends</string>
    <string name="my_friends_title">My Friends</string>
    <string name="my_requests_title">My Requests</string>
    <string name="all_friends_list">All friends list</string>
    <string name="select_home_string">Select home screen</string>
    <string name="language_title">Language</string>
    <string name="setup_language">Setup your language</string>
    <string name="english">ENGLISH</string>
    <string name="welsh">WELSH</string>
    <string name="success_delete_activity">Successfully deleted activity</string>
    <string name="fail_delete_activity">Failed to delete activity from history, please try again later</string>
    <string name="log_title">Log</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="running_activity">Running Activity</string>
    <string name="new_activity">New Activity</string>
    <string name="edit_recent_activity">Edit Activity</string>
    <string name="no_module">No module</string>
    <string name="you_must_spend_time_to_edit_activity">You must have spent at least 1 minute doing the activity in order to edit it</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">CANCEL</string>
    <string name="to">to</string>
    <string name="session_on_app">Sessions on App</string>
    <string name="hours_of_activity_logged">Hours of Activity Logged</string>
    <string name="targets_set">Targets Set</string>
    <string name="targets_met">Targets Met</string>
    <string name="targets_failed_to_meet">Targets Failed to Meet</string>
</resources>