<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corners"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/default_blue">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/module"
            android:textColor="#FFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:textColor="@color/dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/dialog_cancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:background="@color/default_red">

                <TextView
                    android:id="@+id/dialog_cancel_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:textColor="#FFF"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/dialog_no"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@color/default_red">

                <TextView
                    android:id="@+id/dialog_no_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no"
                    android:textSize="16sp"
                    android:textColor="#FFF" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/dialog_ok"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/dialog_ok_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/yes"
                    android:textSize="16sp"
                    android:textColor="#FFF" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>