<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/app_usage_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        android:layout_marginTop="200px">

        <TextView
            android:id="@+id/app_usage_start"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/pink"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/to"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/app_usage_end"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/pink" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="@string/session_on_app"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="200"
                android:gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="@string/hours_of_activity_logged"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center"/>
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="1000"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="@string/targets_set"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="50"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="@string/targets_met"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="25"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="@string/targets_failed_to_meet"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:text="1"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/dark_grey"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>