<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="12dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottom_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/share"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/default_purple">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/share_feed_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/share"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/delete"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/default_red">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/delete_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/delete"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/on_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/feed_item_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FFF">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/clock" />

                <TextView
                    android:id="@+id/feed_item_time_ago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="35dp"
                    android:textColor="@color/dark_grey" />
                <!--<RelativeLayout
                    android:id="@+id/feed_item_option"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="6dp"
                        android:src="@drawable/repor"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>-->
                <!--<RelativeLayout
                    android:id="@+id/feed_item_share"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="18dp"
                        android:src="@drawable/share"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>-->
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/feed_item_bottom_bar">

                <ImageView
                    android:id="@+id/feed_item_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/temp_profile" />

                <TextView
                    android:id="@+id/feed_item_feed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/feed_item_profile"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:textColor="@color/dark_grey" />

                <LinearLayout
                    android:id="@+id/feed_item_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/feed_item_profile"
                    android:visibility="gone"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/feed_item_hide_post"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:text="@string/hide_post"
                        android:textColor="@color/dark_grey" />

                    <LinearLayout
                        android:id="@+id/feed_item_selfpost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.86"
                        android:weightSum="2.86">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.13"
                            android:src="@drawable/separator" />

                        <TextView
                            android:id="@+id/feed_item_hide_friend"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="@string/hide_friend"
                            android:textColor="@color/dark_grey" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.13"
                            android:src="@drawable/separator" />

                        <TextView
                            android:id="@+id/feed_item_delete_friend"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:gravity="center"
                            android:text="@string/delete_friend"
                            android:textColor="@color/dark_grey" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/feed_item_close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/x"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>
    </com.daimajia.swipe.SwipeLayout>
</android.support.v7.widget.CardView>